# python-handlebars

./: .gitignore  changelog.md  pyproject.toml  readme.md  tests.py
.github/workflows/: ci.yml
ci/: requirements-01-setuptools.txt  requirements-02-coverage.txt  requirements-03-flake8.txt
handlebars/: __init__.py  _compiler.py
handlebars/_templates/: __init__.py
tests/: test__compiler.py  test_acceptance.py
