[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-handlebars"
version = "0.0.1"
description = 'Handlebars.js templating for Python 3'
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [
  { name = "wbond", email = "will@wbond.net" },
  { name = "mjumbewu", email = "mjumbewu@gmail.com" },
  { name = "hugobessa", email = "hugo@vinta.com.br" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "PyMeta3>=0.5.1"
]

[project.urls]
Documentation = "https://github.com/vintasoftware/python-handlebars"
Issues = "https://github.com/vintasoftware/python-handlebars/issues"
Source = "https://github.com/vintasoftware/python-handlebars"

[tool.setuptools]
packages = ["handlebars", "handlebars._templates"]
